# tauri-awesome-rpc

./: Cargo.toml  README.md
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: audit.yml  covector-status.yml  covector-version-or-publish.yml  format.yml  lint.yml  test.yml
examples/vanilla/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/vanilla/public/: index.html
examples/vanilla/src/: global.d.ts  main.ts
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs
