[package]
name = "tauri-awesome-rpc"
version = "0.0.0"
edition = "2021"
rust-version = "1.56"
authors = ["Tauri Programme within The Commons Conservancy", "Victor Aremu"]
categories = ["gui", "web-programming"]
license = "Apache-2.0 OR MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/ahkohd/tauri-awesome-rpc"
description = "😎 A custom invoke system for Tauri that leverages WebSockets"
exclude = ["/examples", ".license_template", "CHANGELOG.md", "/target"]

[dependencies]
tauri = "1.0.0-rc.10"
portpicker = "0.1"
serde_json = "1.0"
jsonrpc-ws-server = "18.0.0"
serde = "1.0"
