[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tauri Programme within The Commons Conservancy"]
repository = ""
edition = "2021"
rust-version = "1.56"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
tauri-utils = "1.4.0"
tauri-awesome-rpc = { path = "../../../" }
tokio = { version = "1.18.2", features = ["rt", "time"] }

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
